<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
    					http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- Parent -->
	<parent>
		<groupId>org.jboss.arquillian.examples</groupId>
		<artifactId>parent</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>

	<artifactId>arquillian-jpa-drone</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>war</packaging>

	<name>arquillian-jpa-drone</name>
	<url>http://arquillian.org/guides/functional_testing_using_jpa_and_drone/</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<wildfly.version>8.1.0.Final</wildfly.version>
		<wildfly.home>${project.basedir}/target/wildfly-${wildfly.version}</wildfly.home>
	</properties>


	<dependencies>
		<!-- Java EE6 stack -->
		<dependency>
			<groupId>org.jboss.spec</groupId>
			<artifactId>jboss-javaee-web-6.0</artifactId>
			<version>3.0.1.Final</version>
			<type>pom</type>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>xalan</groupId>
					<artifactId>xalan</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Graphene Webdriver -->
		<dependency>
			<groupId>org.jboss.arquillian.graphene</groupId>
			<artifactId>graphene-webdriver</artifactId>
			<type>pom</type>
			<scope>test</scope>
		</dependency>

	</dependencies>


	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.3</version>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<!-- Java EE 6 does not require web.xml -->
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>wildfy81-embedded</id>
			<!-- the dependencies for Wildfly8.1 -->
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.wildfly</groupId>
					<artifactId>wildfly-arquillian-container-embedded</artifactId>
					<version>${wildfly.version}</version>
				</dependency>
				<dependency>
					<groupId>org.wildfly</groupId>
					<artifactId>wildfly-embedded</artifactId>
					<version>${wildfly.version}</version>
				</dependency>
			</dependencies>

			<build>
				<plugins>
					<!-- You need the maven dependency plugin to download locally a zip 
						with the server, unless you provide your own, it will download under the 
						/target directory -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>2.8</version>
						<executions>
							<execution>
								<id>unpack</id>
								<phase>process-test-classes</phase>
								<goals>
									<goal>unpack</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.wildfly</groupId>
											<artifactId>wildfly-dist</artifactId>
											<version>${wildfly.version}</version>
											<type>zip</type>
											<overWrite>false</overWrite>
											<outputDirectory>target/</outputDirectory>
										</artifactItem>
									</artifactItems>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<!-- Fork every test because it will launch a separate AS instance -->
							<forkCount>0</forkCount>
							<reuseForks>true</reuseForks>
							<argLine>-Xmx128m -XX:MaxPermSize=128m</argLine>
							<systemPropertyVariables>
								<arquillian.launch>wildfly-8.1.0</arquillian.launch>
								<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
								<jboss.home>${wildfly.home}</jboss.home>
								<module.path>${wildfly.home}/modules</module.path>
								<jboss.socket.binding.port-offset>200</jboss.socket.binding.port-offset>
							</systemPropertyVariables>

							<redirectTestOutputToFile>false</redirectTestOutputToFile>

						</configuration>
					</plugin>
					
					<plugin>
						<groupId>org.wildfly.plugins</groupId>
						<artifactId>wildfly-maven-plugin</artifactId>
						<version>1.0.2.Final</version>
						<configuration>
							<jboss-home>${wildfly.home}</jboss-home>
							<jvmArgs>-Xmx256m -XX:MaxPermSize=128m</jvmArgs>
							<modules-path>
								<paths>
									<path>${wildfly.home}/modules</path>
								</paths>
							</modules-path>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
